# ADS-B_Detection

./: .gitignore  CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  adsb_test  temp.file
src/: Preprocessor.hpp  fuzzy_ga_int_test.cpp  main.cpp  optimizer.cpp
src/adsb/: AdsbCsvParser.hpp  AdsbState.hpp
src/analysis/: Analysis.hpp
src/feature/: FeatureExtractor.hpp  FeatureVector.hpp
src/fuzzy/: AdsbFuzzyVariable.hpp  FuzzyInferenceSystem.hpp  FuzzyRule.hpp  FuzzyVariable.hpp  MembershipFunction.hpp  RuleBase.hpp
src/ga/: Chromosome.cpp  Chromosome.hpp  Fitness.cpp  Fitness.hpp  GAEngine.cpp  GAEngine.hpp  Population.cpp  Population.hpp  Selection.cpp  Selection.hpp  ga_config.cpp  ga_config.hpp  ga_test.cpp
src/preprocessing/: AdsbDataPreprocessor.hpp
synth_data/: DataGenerator.cpp  aggressive_training_adsb.csv  boundary_stress_5hr.csv  generated_1.csv  generated_data.csv  generator
test/: TestFuzzySystem.cpp  adsb_int_test.cpp  fuzzy_ga_int_test.cpp  ga_test.cpp
tools/: analyze_results.py  plot_membership.py
tools/results/: analysis_summary.txt
